[package]
name = "batmon"
version = "0.2.4"
authors = ["6543 <6543@obermui.de>"]
edition = "2018"
description = "Interactive batteries viewer"
homepage = "https://github.com/6543/batmon"
repository = "https://github.com/6543/batmon"
readme = "README.md"
categories = ["os"]
keywords = ["tui", "battery", "linux", "macos"]
license = "Apache-2.0"
exclude = ["assets"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
battery = "^0.7"
structopt = { version = "^0.2", default-features = false }
log = "^0.4"
stderrlog = "^0.6"
tui = "0.6.0"
termion = "1.5.2"
itertools = "^0.12"
humantime = "1.2.0"
